--- a/src/partials/_services.scss
+++ b/src/partials/_services.scss
@@ -1,7 +1,7 @@
 .services {
   &__wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     @include mobile() {
       flex-direction: column;
